<resources>
    <string name="app_name">DiscountApp</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="recents">Recents</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="take_photo">Take Photo</string>
    <string name="discount_app">Discount App</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_results">ResultsActivity</string>
    <string name="avatar">Avatar</string>
    <string name="liked_posts">Liked Posts</string>
    <string name="bio">Bio</string>
    <string name="uploaded_posts">Uploaded Posts</string>
    <string name="username">Username</string>
    <string name="score">Score</string>
    <string name="snacks">Snacks</string>
    <string name="beverages">Beverages</string>
    <string name="home_care">Home Care</string>
    <string name="fruit_veg"><![CDATA[Fruit&Veg]]></string>
    <string name="meat">Meat</string>
    <string name="personal_care">Personal Care</string>
    <string name="other">Other</string>
    <string name="convenience">Convenience</string>
    <string name="back">Back</string>
    <string name="results">Results</string>
    <string name="login">Login</string>
    <string name="register">register</string>
    <string name="title_activity_register">Register</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="main_menu">Main Menu</string>
    <string name="create_post">Create Post</string>
    <string name="button">Button</string>
    <string name="select_photo">Select Photo</string>
    <string name="post_photo">Post Photo</string>
    <string name="description">Description</string>
    <string name="current_price">Current Price</string>
    <string name="previous_price">Previous Price</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="post">Post</string>
    <string name="cancel">Cancel</string>
    <string name="edit_bio">Edit Bio</string>
    <string name="thumbnail">thumbnail</string>
    <string name="title">Title</string>
    <string name="sign_in_google">Sign In with Google</string>
    <string name="sign_in_email">Sign In with Email</string>
    <string name="sign_in_phone">Sign In with Phone</string>
    <string name="scorePeriod">Score:</string>
    <string name="delete">Delete</string>
    <string name="like">Like</string>
    <string name="category">Category</string>
    <string name="image_of_post">Image of Post</string>
    <string name="image_of_uploader">Image of Uploader</string>
</resources>
