<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/post_thumb_row"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/thumbnail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/post_title_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/title"
        app:layout_constraintStart_toEndOf="@+id/post_thumb_row"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/post_prevPrice_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous_price"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/post_thumb_row" />

    <TextView
        android:id="@+id/post_currentPrice_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_price"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/post_expiry_row"
        app:layout_constraintStart_toEndOf="@+id/post_prevPrice_row" />

    <TextView
        android:id="@+id/post_expiry_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expiry_date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/post_username_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>