<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <ImageView
        android:id="@+id/profile_image_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/avatar"
        app:layout_constraintBottom_toTopOf="@+id/profile_bio_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/profile_username_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/profile_score_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profile_image_profile"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profile_score_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/profile_bio_profile"
        app:layout_constraintEnd_toEndOf="@+id/profile_username_profile"
        app:layout_constraintStart_toStartOf="@+id/profile_username_profile" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/uploaded_posts_profile"
        android:layout_width="410dp"
        android:layout_height="111dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upload_text_profile" />

    <TextView
        android:id="@+id/upload_text_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uploaded_posts"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_bio_profile" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/like_posts_profile"
        android:layout_width="410dp"
        android:layout_height="108dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/liked_text_profile"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/liked_text_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/liked_posts"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uploaded_posts_profile" />

    <TextView
        android:id="@+id/profile_bio_profile"
        android:layout_width="410dp"
        android:layout_height="140dp"
        android:layout_marginBottom="463dp"
        android:text="@string/bio"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/logout_button_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="59dp"
        android:text="@string/logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/like_posts_profile"
        app:layout_constraintVertical_bias="0.513" />

    <Button
        android:id="@+id/main_button_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_menu"
        app:layout_constraintBottom_toTopOf="@+id/logout_button_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/like_posts_profile" />
</androidx.constraintlayout.widget.ConstraintLayout>